fixed z-index in video calls

--- a/client/src/Components/VideoCall/call.module.scss
+++ b/client/src/Components/VideoCall/call.module.scss
@@ -5,6 +5,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
+	z-index: 100;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -26,6 +27,7 @@
 			width: 25%;
 			height: 25%;
 			z-index: 12;
+			z-index: 101;
 			background-color: rgba(0, 0, 0, 0.7);
 			border-radius: 10px;
 
@@ -48,7 +50,7 @@
 			bottom: 5%;
 			left: 50%;
 			transform: translateX(-50%);
-			z-index: 999;
+			z-index: 101;
 		}
 
 		.notification {
@@ -81,7 +83,7 @@
 			bottom: 5%;
 			left: 50%;
 			transform: translateX(-50%);
-			z-index: 999;
+			z-index: 101;
 		}
 
 	}
